Finalized Standalone Repo

--- a/process_atrophy.ipynb
+++ b/process_atrophy.ipynb
@@ -182,11 +182,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "folder_path = r'C:\\Users\\Calvin\\Documents\\Software\\Research\\nimlab\\vbm\\cat12\\test'"
+    "folder_path = r'C:\\Users\\Calvin\\OneDrive\\OneDrive_Documents\\Work\\Software\\VBM\\msa_niftis'"
    ]
   },
   {
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -208,8 +208,8 @@
      "text": [
       "Building Docker image...\n",
       "Docker image built successfully.\n",
-      "Processing folder with Docker: C:\\Users\\Calvin\\Documents\\Software\\Research\\nimlab\\vbm\\cat12\\test\n",
-      "Finished processing: C:\\Users\\Calvin\\Documents\\Software\\Research\\nimlab\\vbm\\cat12\\test\n"
+      "Processing folder with Docker: C:\\Users\\Calvin\\OneDrive\\OneDrive_Documents\\Work\\Software\\VBM\\msa_niftis\n",
+      "Finished processing: C:\\Users\\Calvin\\OneDrive\\OneDrive_Documents\\Work\\Software\\VBM\\msa_niftis\n"
      ]
     }
    ],
@@ -237,11 +237,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "folder_path = r'C:\\Users\\Calvin\\Documents\\Software\\Research\\nimlab\\vbm\\cat12\\test'"
+    "folder_path = r'C:\\Users\\Calvin\\Dropbox (Partners HealthCare)\\studies\\atrophy_seeds_2023\\shared_analysis\\niftis_for_elmira'"
    ]
   },
   {
@@ -256,9 +256,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Building Docker image...\n",
+      "Docker image built successfully.\n",
+      "Processing folder with Docker: C:\\Users\\Calvin\\Dropbox (Partners HealthCare)\\studies\\atrophy_seeds_2023\\shared_analysis\\niftis_for_elmira\n",
+      "An error occurred while processing C:\\Users\\Calvin\\Dropbox (Partners HealthCare)\\studies\\atrophy_seeds_2023\\shared_analysis\\niftis_for_elmira with Docker: Command '['docker', 'run', '--rm', '-v', 'C:/Users/Calvin/Dropbox (Partners HealthCare)/studies/atrophy_seeds_2023/shared_analysis/niftis_for_elmira:/data', 'cat12:latest']' returned non-zero exit status 125.\n"
+     ]
+    }
+   ],
    "source": [
     "CalvinVBM.build_docker_image(dockerfile_path=r\"C:\\Users\\Calvin\\Documents\\Software\\Research\\nimlab\\vbm\\cat12\\containers\\Dockerfile.cat12_parallel\")\n",
     "CalvinVBM.run_docker_on_folder(folder_path=folder_path)"
@@ -290,7 +301,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
