Added a setup.py for installation and rerouted path/package to name calvin_utils.

--- a/02_atrophy_seed_derivation.ipynb
+++ b/02_atrophy_seed_derivation.ipynb
@@ -87,7 +87,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from calvin_utils.file_utils.import_matrices import import_matrices_from_folder #<----- CALVIN IMPORT\n",
+    "from calvin_vbm.file_utils.import_matrices import import_matrices_from_folder #<----- CALVIN IMPORT\n",
     "\n",
     "def import_dataframes_from_folders(base_directory, grey_matter_glob_name_pattern, white_matter_glob_name_pattern, csf_glob_name_pattern):\n",
     "    \"\"\"\n",
@@ -265,7 +265,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from calvin_utils.file_utils.import_matrices import import_matrices_from_folder\n",
+    "from calvin_vbm.file_utils.import_matrices import import_matrices_from_folder\n",
     "def import_control_dataframes(base_directory, control_grey_matter_glob_name_pattern, control_white_matter_glob_name_pattern, control_csf_glob_name_pattern):\n",
     "    \"\"\"\n",
     "    Imports control dataframes from specified directories and glob name patterns.\n",
@@ -508,7 +508,7 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "from calvin_utils.nifti_utils.generate_nifti import view_and_save_nifti #<-----CAlVIN IMPORT\n",
+    "from calvin_vbm.nifti_utils.generate_nifti import view_and_save_nifti #<-----CAlVIN IMPORT\n",
     "from tqdm import tqdm\n",
     "\n",
     "def save_nifti_to_bids(dataframes_dict, bids_base_dir, analysis='tissue_segment_z_scores', ses=None, dry_run=True):\n",
@@ -608,7 +608,7 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "from calvin_utils.nifti_utils.generate_nifti import view_and_save_nifti #<-----CAlVIN IMPORT\n",
+    "from calvin_vbm.nifti_utils.generate_nifti import view_and_save_nifti #<-----CAlVIN IMPORT\n",
     "from tqdm import tqdm\n",
     "\n",
     "def save_control_nifti_to_bids(dataframes_dict, out_dir=None, dry_run=True):\n",
