--- a/03_extract_atrophy_information.ipynb
+++ b/03_extract_atrophy_information.ipynb
@@ -889,7 +889,7 @@
     }
    ],
    "source": [
-    "from calvin_utils.file_utils.import_matrices import import_matrices_from_folder\n",
+    "from calvin_vbm.file_utils.import_matrices import import_matrices_from_folder\n",
     "region_of_interest_df = import_matrices_from_folder(connectivity_path=folder_to_import_from, file_pattern=shared_glob_pattern)\n",
     "region_of_interest_df"
    ]
@@ -7010,11 +7010,6 @@
     "\n",
     "--Calvin "
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
