--- a/w_score_tissue_segments/01_preprocess_tissue_segments.ipynb
+++ b/w_score_tissue_segments/01_preprocess_tissue_segments.ipynb
@@ -61,18 +61,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "base_directory = r'/Volumes/One Touch/resources/adni/neuroimaging/true_control/anat'\n",
-    "grey_matter_glob_name_pattern = 'mri/smwp1*'\n",
-    "white_matter_glob_name_pattern = 'mri/smwp2*'\n",
-    "csf_glob_name_pattern = 'mri/smwp3*'"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -389,9 +377,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "nimlab_py310",
+   "display_name": "Python3.10 (nimlab)",
    "language": "python",
-   "name": "python3"
+   "name": "nimlab_py310"
   },
   "language_info": {
    "codemirror_mode": {
