Updates to code base

--- a/notebooks/02B_W_atrophy_seed_derivation.ipynb
+++ b/notebooks/02B_W_atrophy_seed_derivation.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,11 +78,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_directory = r'/Volumes/OneTouch/datasets/adni/neuroimaging/true_ad_randomized/vbm/raws'\n",
+    "base_directory = r'/Volumes/Expansion/datasets/adni/neuroimaging/all_patients_by_diagnosis_symlink/Additional'\n",
     "grey_matter_glob_name_pattern = '*/mri/*mwp1*resampled*'\n",
     "white_matter_glob_name_pattern = '*/mri/*mwp2*resampled*'\n",
     "csf_glob_name_pattern = '*/mri/*mwp3*resampled*'"
@@ -94,8 +94,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from calvin_utils.vbm_utils.preprocessing import import_dataframes_from_folders\n",
-    "\n",
+    "from calvin_utils.vbm_utils.loading import import_dataframes_from_folders\n",
     "dataframes_dict = import_dataframes_from_folders(base_directory, grey_matter_glob_name_pattern, white_matter_glob_name_pattern, csf_glob_name_pattern)"
    ]
   },
@@ -112,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,11 +139,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_directory_control = '/Volumes/OneTouch/datasets/adni/neuroimaging/true_control/anat/mri'\n",
+    "base_directory_control = '/Volumes/Expansion/datasets/adni/neuroimaging/true_control/anat/mri'\n",
     "control_grey_matter_glob_name_pattern = '*smwp1*resampled*'\n",
     "control_white_matter_glob_name_pattern = '*smwp2*resampled*'\n",
     "control_csf_glob_name_pattern = '*smwp3*resampled*'"
@@ -156,8 +155,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from calvin_utils.vbm_utils.preprocessing import import_control_dataframes\n",
-    "\n",
+    "from calvin_utils.vbm_utils.loading import import_control_dataframes\n",
     "control_dataframes_dict = import_control_dataframes(base_directory_control, control_grey_matter_glob_name_pattern, control_white_matter_glob_name_pattern, control_csf_glob_name_pattern)"
    ]
   },
@@ -177,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,12 +214,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "control_covariates_csv_path = '/Users/cu135/Dropbox (Partners HealthCare)/studies/atrophy_seeds_2023/metadata/true_ad_patient_data/patient_covariates.csv'\n",
-    "patient_covariates_csv_path = '/Users/cu135/Dropbox (Partners HealthCare)/studies/atrophy_seeds_2023/metadata/paths_and_covariates/control_group_covariates.csv'"
+    "control_covariates_csv_path = '/Users/cu135/Dropbox (Partners HealthCare)/studies/atrophy_seeds_2023/metadata/paths_and_covariates/control_group_covariates.csv'\n",
+    "patient_covariates_csv_path = '/Volumes/Expansion/datasets/adni/metadata/cleaned_information/wmap_demographics.csv'"
    ]
   },
   {
@@ -231,7 +229,7 @@
    "outputs": [],
    "source": [
     "from calvin_utils.vbm_utils.w_scoring import import_covariates\n",
-    "patient_covariates_df, control_covariates_df = import_covariates(control_covariates_csv_path=control_covariates_csv_path, patient_covariates_csv_path=patient_covariates_csv_path)\n",
+    "control_covariates_df, patient_covariates_df = import_covariates(control_covariates_csv_path=control_covariates_csv_path, patient_covariates_csv_path=patient_covariates_csv_path)\n",
     "control_covariates_df"
    ]
   },
@@ -266,6 +264,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import importlib\n",
+    "from calvin_utils.vbm_utils import w_scoring  # Import the module itself\n",
+    "\n",
+    "# Reload the module to get the updated code\n",
+    "importlib.reload(w_scoring)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from calvin_utils.vbm_utils.w_scoring  import CalvinWMap\n",
     "wmapper = CalvinWMap(dataframes_dict=dataframes_dict, control_dataframes_dict=control_dataframes_dict, control_covariates_df=control_covariates_df, patient_covariates_df=patient_covariates_df)\n",
     "atrophy_dataframes_dict, significant_atrophy_dataframes_dict = wmapper.run()"
@@ -280,13 +291,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from calvin_utils.vbm_utils.processing import generate_composite_maps\n",
-    "unthresholded_atrophy_dataframes_dict = generate_composite_maps(atrophy_dataframes_dict, thresholded=False)\n",
-    "thresholded_atrophy_dataframes_dict = generate_composite_maps(significant_atrophy_dataframes_dict, thresholded=True)"
+    "from calvin_utils.vbm_utils.composite_atrophy_mapper import generate_composite_maps\n",
+    "unthresholded_atrophy_dataframes_dict = generate_composite_maps(atrophy_dataframes_dict, threshold=False)\n",
+    "thresholded_atrophy_dataframes_dict = generate_composite_maps(significant_atrophy_dataframes_dict, threshold=True)"
    ]
   },
   {
@@ -305,11 +316,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_directory='/Volumes/OneTouch/datasets/adni/neuroimaging/true_ad_randomized/vbm/w_atrophy_seeds'"
+    "base_directory='/Volumes/Expansion/datasets/adni/neuroimaging/all_patients_atrophy_seeds'"
    ]
   },
   {
@@ -337,6 +348,16 @@
    "source": [
     "from calvin_utils.vbm_utils.processing import save_nifti_to_bids\n",
     "save_nifti_to_bids(thresholded_atrophy_dataframes_dict, bids_base_dir=base_directory, analysis='thresholded_tissue_segment_w_scores', dry_run=False);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "os.system('say \"Atrophy seeds are complete.\"')"
    ]
   },
   {
