--- a/notebooks/01_preprocess_tissue_segments.ipynb
+++ b/notebooks/01_preprocess_tissue_segments.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,11 +62,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_directory = r'/Volumes/OneTouch/datasets/adni/neuroimaging/true_ad_randomized/vbm'\n",
+    "base_directory = r'/Volumes/Expansion/datasets/adni/neuroimaging/all_patients'\n",
     "grey_matter_glob_name_pattern = '*/mri/mwp1*'\n",
     "white_matter_glob_name_pattern = '*/mri/mwp2*'\n",
     "csf_glob_name_pattern = '*/mri/mwp3*'"
@@ -122,7 +122,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.1.-1"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4
  },
