updates to bad code

--- a/notebooks/00_process_atrophy.ipynb
+++ b/notebooks/00_process_atrophy.ipynb
@@ -4,155 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 0 - VBM Introduction"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 1 - Code Definition\n",
-    "- I am leaving the code directly here so you do not need to install anything.\n",
-    "- Code is also exposed so you can edit as needed."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "import sys\n",
-    "import platform\n",
-    "import subprocess\n",
-    "\n",
-    "class CalvinVBM:\n",
-    "    \"\"\"\n",
-    "    CalvinVBM is a class for orchestrating neuroimaging data processing using Docker.\n",
-    "    It facilitates building Docker images and running Docker containers on individual directories containing NIfTI files.\n",
-    "    \"\"\"\n",
-    "\n",
-    "    @staticmethod\n",
-    "    def build_docker_image(dockerfile_path):\n",
-    "        \"\"\"\n",
-    "        Builds the Docker image from the specified Dockerfile.\n",
-    "\n",
-    "        Args:\n",
-    "            dockerfile_path (str): The path to the Dockerfile.\n",
-    "        \"\"\"\n",
-    "        try:\n",
-    "            print(\"Building Docker image...\")\n",
-    "            subprocess.call(f\"docker build -t cat12:latest -f {dockerfile_path} .\", shell=True, stdout=None, stderr=None)\n",
-    "            # subprocess.run([\"docker\", \"build\", \"-t\", \"cat12:latest\", \"-f\", dockerfile_path, \".\"], check=True)\n",
-    "            print(\"Docker image built successfully.\")\n",
-    "        except subprocess.CalledProcessError as e:\n",
-    "            print(f\"An error occurred while building the Docker image: {e}\")\n",
-    "            sys.exit(1)\n",
-    "\n",
-    "    @staticmethod\n",
-    "    def convert_path_for_docker(path):\n",
-    "        \"\"\"\n",
-    "        Converts a Windows path to a Docker-compatible path (if running on Windows).\n",
-    "\n",
-    "        Args:\n",
-    "            path (str): The original file system path.\n",
-    "\n",
-    "        Returns:\n",
-    "            str: The converted path suitable for Docker volume mounting.\n",
-    "        \"\"\"\n",
-    "        if platform.system() == \"Windows\":\n",
-    "            return path.replace(\"\\\\\", \"/\") #.replace(\"C:\", \"C\")\n",
-    "        return path\n",
-    "\n",
-    "    @staticmethod\n",
-    "    def run_docker_on_folder(folder_path):\n",
-    "        \"\"\"\n",
-    "        Runs the Docker container on the specified folder containing NIfTI files.\n",
-    "\n",
-    "        Args:\n",
-    "            folder_path (str): The path to the folder containing NIfTI files.\n",
-    "        \"\"\"\n",
-    "        try:\n",
-    "            docker_path = CalvinVBM.convert_path_for_docker(folder_path)\n",
-    "            print(f\"Processing folder with Docker: {folder_path}\")\n",
-    "            subprocess.run([\"docker\", \"run\", \"--rm\", \"-v\", f\"{docker_path}:/data\", \"cat12:latest\"], check=True)\n",
-    "            print(f\"Finished processing: {folder_path}\")\n",
-    "        except subprocess.CalledProcessError as e:\n",
-    "            print(f\"An error occurred while processing {folder_path} with Docker: {e}\")\n",
-    "\n",
-    "    @staticmethod\n",
-    "    def submit_hpc_jobs(data_dir, docker_script_path, job_script_path):\n",
-    "        \"\"\"\n",
-    "        Submits jobs to an HPC scheduler for processing each subdirectory \n",
-    "        in the specified data directory.\n",
-    "\n",
-    "        Args:\n",
-    "            data_dir (str): The path to the directory containing subdirectories with NIfTI files.\n",
-    "            docker_script_path (str): The path to the Docker run script.\n",
-    "            job_script_path (str): The path to the job submission script for HPC.\n",
-    "        \"\"\"\n",
-    "        # Ensure the data directory exists\n",
-    "        if not os.path.isdir(data_dir):\n",
-    "            print(f\"Data directory does not exist: {data_dir}\")\n",
-    "            sys.exit(1)\n",
-    "\n",
-    "        # Iterate over all subdirectories and submit a job for each\n",
-    "        for folder_name in os.listdir(data_dir):\n",
-    "            folder_path = os.path.join(data_dir, folder_name)\n",
-    "            if os.path.isdir(folder_path):\n",
-    "                CalvinVBM.submit_hpc_job(folder_path, docker_script_path, job_script_path)\n",
-    "\n",
-    "    @staticmethod\n",
-    "    def submit_hpc_job(folder_path, docker_script_path, job_script_path):\n",
-    "        \"\"\"\n",
-    "        Submits a single job to an HPC scheduler for processing a given folder.\n",
-    "\n",
-    "        Args:\n",
-    "            folder_path (str): The path to the folder to process.\n",
-    "            docker_script_path (str): The path to the Docker run script.\n",
-    "            job_script_path (str): The path to the job submission script for HPC.\n",
-    "        \"\"\"\n",
-    "        try:\n",
-    "            print(f\"Submitting job for folder: {folder_path}\")\n",
-    "            # Replace the following line with your HPC's job submission command\n",
-    "            subprocess.run([\n",
-    "                \"bsub\", \"-J\", \"cat12_job\", \n",
-    "                \"-o\", \"/path/to/output.txt\", \n",
-    "                \"-e\", \"/path/to/error.txt\", \n",
-    "                \"-q\", \"normal\", \n",
-    "                \"-R\", \"rusage[mem=6000]\", \n",
-    "                \"python\", docker_script_path, folder_path\n",
-    "            ], check=True)\n",
-    "        except subprocess.CalledProcessError as e:\n",
-    "            print(f\"An error occurred while submitting {folder_path}: {e}\")\n",
-    "\n",
-    "\n",
-    "\n",
-    "# if __name__ == \"__main__\":\n",
-    "#     if len(sys.argv) != 3:\n",
-    "#         print(\"Usage: python calvin_vbm.py <path_to_data_directory> <path_to_dockerfile>\")\n",
-    "#         sys.exit(1)\n",
-    "\n",
-    "#     data_directory = sys.argv[1]\n",
-    "#     dockerfile_path = sys.argv[2]\n",
-    "\n",
-    "#     CalvinVBM.submit_jobs(data_directory, dockerfile_path)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 02 - Execution"
+    "# Run on Server"
    ]
   },
   {
@@ -169,7 +21,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Option 2 - Run A Single Folder of Nifti Files**\n",
+    "# Run Locally"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Option A - Run A Single Folder that Has Exposed Nifti Files**\n",
     "- This does not submit to cluster. It is stable and will run on your machine. "
    ]
   },
@@ -182,11 +41,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "folder_path = r'C:\\Users\\Calvin\\OneDrive\\OneDrive_Documents\\Work\\Software\\VBM\\msa_niftis'"
+    "folder_path = r'C:\\Users\\Calvin\\Partners HealthCare Dropbox\\Calvin Howard\\resources\\datasets\\PINES_SCHIZOPHRENIA_ECT'"
    ]
   },
   {
@@ -199,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -207,72 +66,49 @@
      "output_type": "stream",
      "text": [
       "Building Docker image...\n",
-      "Docker image built successfully.\n",
-      "Processing folder with Docker: C:\\Users\\Calvin\\OneDrive\\OneDrive_Documents\\Work\\Software\\VBM\\msa_niftis\n",
-      "Finished processing: C:\\Users\\Calvin\\OneDrive\\OneDrive_Documents\\Work\\Software\\VBM\\msa_niftis\n"
+      "2024/11/07 18:16:28 http2: server: error reading preface from client //./pipe/docker_engine: file has already been closed\n",
+      "ERROR: resolve : CreateFile C:\\Users\\Calvin\\Documents\\Software\\Research\\nimlab\\vbm: The system cannot find the file specified.\n",
+      "\n",
+      "View build details: docker-desktop://dashboard/build/default/default/xvn434ac681jtcq8xjhi7orgg\n",
+      "\n"
+     ]
+    },
+    {
+     "ename": "CalledProcessError",
+     "evalue": "Command '['docker', 'build', '-t', 'cat12:latest', '-f', 'C:\\\\Users\\\\Calvin\\\\Documents\\\\Software\\\\Research\\\\nimlab\\\\vbm\\\\cat12\\\\containers\\\\Dockerfile.cat12', '.']' returned non-zero exit status 1.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mCalledProcessError\u001b[0m                        Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[12], line 4\u001b[0m\n\u001b[0;32m      2\u001b[0m sys\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mappend(\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mc:\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mUsers\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mCalvin\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mDocuments\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mSoftware\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mvbm\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m# from src.calvin_vbm import CalvinVBM\u001b[39;00m\n\u001b[1;32m----> 4\u001b[0m \u001b[43mbuild_docker_image\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdockerfile_path\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43mr\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mC:\u001b[39;49m\u001b[38;5;124;43m\\\u001b[39;49m\u001b[38;5;124;43mUsers\u001b[39;49m\u001b[38;5;124;43m\\\u001b[39;49m\u001b[38;5;124;43mCalvin\u001b[39;49m\u001b[38;5;124;43m\\\u001b[39;49m\u001b[38;5;124;43mDocuments\u001b[39;49m\u001b[38;5;124;43m\\\u001b[39;49m\u001b[38;5;124;43mSoftware\u001b[39;49m\u001b[38;5;124;43m\\\u001b[39;49m\u001b[38;5;124;43mResearch\u001b[39;49m\u001b[38;5;124;43m\\\u001b[39;49m\u001b[38;5;124;43mnimlab\u001b[39;49m\u001b[38;5;124;43m\\\u001b[39;49m\u001b[38;5;124;43mvbm\u001b[39;49m\u001b[38;5;124;43m\\\u001b[39;49m\u001b[38;5;124;43mcat12\u001b[39;49m\u001b[38;5;124;43m\\\u001b[39;49m\u001b[38;5;124;43mcontainers\u001b[39;49m\u001b[38;5;124;43m\\\u001b[39;49m\u001b[38;5;124;43mDockerfile.cat12\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;66;03m# CalvinVBM.run_docker_on_folder(folder_path=folder_path)\u001b[39;00m\n",
+      "Cell \u001b[1;32mIn[11], line 25\u001b[0m, in \u001b[0;36mbuild_docker_image\u001b[1;34m(dockerfile_path)\u001b[0m\n\u001b[0;32m     23\u001b[0m \u001b[38;5;66;03m# Check if the build was successful\u001b[39;00m\n\u001b[0;32m     24\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m result\u001b[38;5;241m.\u001b[39mreturncode \u001b[38;5;241m!=\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[1;32m---> 25\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m subprocess\u001b[38;5;241m.\u001b[39mCalledProcessError(result\u001b[38;5;241m.\u001b[39mreturncode, result\u001b[38;5;241m.\u001b[39margs)\n\u001b[0;32m     27\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDocker image built successfully.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mCalledProcessError\u001b[0m: Command '['docker', 'build', '-t', 'cat12:latest', '-f', 'C:\\\\Users\\\\Calvin\\\\Documents\\\\Software\\\\Research\\\\nimlab\\\\vbm\\\\cat12\\\\containers\\\\Dockerfile.cat12', '.']' returned non-zero exit status 1."
      ]
     }
    ],
    "source": [
+    "import sys\n",
+    "sys.path.append(r\"c:\\Users\\Calvin\\Documents\\Software\\vbm\")\n",
+    "from src.calvin_vbm import CalvinVBM\n",
     "CalvinVBM.build_docker_image(dockerfile_path=r\"C:\\Users\\Calvin\\Documents\\Software\\Research\\nimlab\\vbm\\cat12\\containers\\Dockerfile.cat12\")\n",
-    "CalvinVBM.run_docker_on_folder(folder_path=folder_path)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Option 3 - Multiprocess a Folder of Nifti Files**\n",
-    "- This is stable\n",
-    "- Will not provide Total Intracranial Volume. You will need to get it from reports/<file>.xml if you want to correct for Total Intracranial Volume\n",
-    "- This may strain your computer. However it will run locally"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Define the folder with the Niftis in it"
+    "# CalvinVBM.run_docker_on_folder(folder_path=folder_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "folder_path = r'C:\\Users\\Calvin\\Dropbox (Partners HealthCare)\\studies\\atrophy_seeds_2023\\shared_analysis\\niftis_for_elmira'"
+    "/cat_standalone_get_TIV_calvin.m\n",
+    "/cat_standalone_get_TIV_calvin.m"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Run Docker\n",
-    "- Estimated 15 minutes per Nifti file.\n",
-    "- using 4 processors.\n",
-    "- Expected time to completiong = number of file / processors * 15 minutes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Building Docker image...\n",
-      "Docker image built successfully.\n",
-      "Processing folder with Docker: C:\\Users\\Calvin\\Dropbox (Partners HealthCare)\\studies\\atrophy_seeds_2023\\shared_analysis\\niftis_for_elmira\n",
-      "An error occurred while processing C:\\Users\\Calvin\\Dropbox (Partners HealthCare)\\studies\\atrophy_seeds_2023\\shared_analysis\\niftis_for_elmira with Docker: Command '['docker', 'run', '--rm', '-v', 'C:/Users/Calvin/Dropbox (Partners HealthCare)/studies/atrophy_seeds_2023/shared_analysis/niftis_for_elmira:/data', 'cat12:latest']' returned non-zero exit status 125.\n"
-     ]
-    }
-   ],
-   "source": [
-    "CalvinVBM.build_docker_image(dockerfile_path=r\"C:\\Users\\Calvin\\Documents\\Software\\Research\\nimlab\\vbm\\cat12\\containers\\Dockerfile.cat12_parallel\")\n",
-    "CalvinVBM.run_docker_on_folder(folder_path=folder_path)"
+    "# Option B - Run A BIDS-Style Directory with Exposed Nifti Files"
    ]
   },
   {
@@ -301,7 +137,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
