--- a/notebooks/00_process_brains.ipynb
+++ b/notebooks/00_process_brains.ipynb
@@ -4,39 +4,83 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Run on Server"
+    "# 01 - Pull or Build the Docker Container"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Building Docker image...\n",
+      "2024/11/07 22:23:38 http2: server: error reading preface from client //./pipe/docker_engine: file has already been closed\n",
+      "#0 building with \"default\" instance using docker driver\n",
+      "\n",
+      "#1 [internal] load build definition from Dockerfile.cat12\n",
+      "#1 transferring dockerfile: 1.92kB done\n",
+      "#1 DONE 0.0s\n",
+      "\n",
+      "#2 [internal] load metadata for docker.io/library/ubuntu:focal-20210416\n",
+      "#2 DONE 0.3s\n",
+      "\n",
+      "#3 [internal] load .dockerignore\n",
+      "#3 transferring context: 2B done\n",
+      "#3 DONE 0.0s\n",
+      "\n",
+      "#4 [1/5] FROM docker.io/library/ubuntu:focal-20210416@sha256:adf73ca014822ad8237623d388cedf4d5346aa72c270c5acc01431cc93e18e2d\n",
+      "#4 DONE 0.0s\n",
+      "\n",
+      "#5 [2/5] WORKDIR /root\n",
+      "#5 CACHED\n",
+      "\n",
+      "#6 [3/5] RUN apt-get update  && apt-get -y install wget nano unzip libxext6 libxt6 moreutils  && apt-get clean\n",
+      "#6 CACHED\n",
+      "\n",
+      "#7 [4/5] RUN mkdir /tmp/mcr_install  && mkdir /opt/mcr  && wget --progress=bar:force -P /tmp/mcr_install https://ssd.mathworks.com/supportfiles/downloads/R2017b/deployment_files/R2017b/installers/glnxa64/MCR_R2017b_glnxa64_installer.zip  && unzip -q /tmp/mcr_install/MCR_R2017b_glnxa64_installer.zip -d /tmp/mcr_install  && /tmp/mcr_install/install -destinationFolder /opt/mcr -agreeToLicense yes -mode silent\n",
+      "#7 CACHED\n",
+      "\n",
+      "#8 [5/5] RUN wget --progress=bar:force -P /tmp http://www.neuro.uni-jena.de/cat12/CAT12.8.2_r2166_R2017b_MCR_Linux.zip  && unzip -q /tmp/CAT12.8.2_r2166_R2017b_MCR_Linux.zip -d /opt  && mv /opt/CAT12.8.2_r2166_R2017b_MCR_Linux /opt/spm  && /opt/spm/run_spm12.sh /opt/mcr/v93 --version  && chmod +x /opt/spm/spm12 /opt/spm/*.sh /opt/spm/spm12_mcr/home/gaser/gaser/spm/spm12/toolbox/cat12/CAT.glnx86/CAT_*  && cp -v /opt/spm/spm12_mcr/home/gaser/gaser/spm/spm12/toolbox/cat12/cat_long_main.txt /opt/spm/spm12_mcr/home/gaser/gaser/spm/spm12/toolbox/cat12/cat_long_main.m  && rm -rf /tmp/*\n",
+      "#8 CACHED\n",
+      "\n",
+      "#9 exporting to image\n",
+      "#9 exporting layers done\n",
+      "#9 writing image sha256:3d7f1b462fc436bfde342c5e6ca62b752b26632381207608f894b9c9c65fd8d2 done\n",
+      "#9 naming to docker.io/library/cat12:latest done\n",
+      "#9 DONE 0.0s\n",
+      "\n",
+      "View build details: docker-desktop://dashboard/build/default/default/fi0g1ng5tbkatkv11d2hszdln\n",
+      "\n",
+      "What's Next?\n",
+      "  View a summary of image vulnerabilities and recommendations â†’ docker scout quickview\n",
+      "\n",
+      "Docker image built successfully.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "sys.path.append(r\"c:\\Users\\Calvin\\Documents\\Software\\vbm\")\n",
+    "from src.calvin_vbm import CalvinVBM\n",
+    "CalvinVBM.build_docker_image()\n",
+    "# CalvinVBM.run_docker_on_folder(folder_path=folder_path)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Option 1) Submit Jobs to Server**\n",
-    "- This uses LSF Job Schedler-style submission. \n",
-    "- You must run this off a server which has LSF installed, such as Harvard's ERISTwo.\n",
-    "- Some clusters will not work well with Docker, and Singularity will be required. This is pending. "
+    "# 02 - Run Docker Container"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Run Locally"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Option A - Run A Single Folder that Has Exposed Nifti Files**\n",
-    "- This does not submit to cluster. It is stable and will run on your machine. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Define the folder with the Niftis in it"
+    "Choose folder"
    ]
   },
   {
@@ -52,37 +96,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Run Docker\n",
-    "- Estimated 15 minutes per Nifti file. "
+    "Choose script to run from vbm/src"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "script = r'C:\\Users\\Calvin\\Documents\\Software\\vbm\\src\\run_segmentation_bids.sh'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Run it"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Building Docker image...\n",
-      "2024/11/07 18:16:28 http2: server: error reading preface from client //./pipe/docker_engine: file has already been closed\n",
-      "ERROR: resolve : CreateFile C:\\Users\\Calvin\\Documents\\Software\\Research\\nimlab\\vbm: The system cannot find the file specified.\n",
-      "\n",
-      "View build details: docker-desktop://dashboard/build/default/default/xvn434ac681jtcq8xjhi7orgg\n",
-      "\n"
-     ]
-    },
-    {
-     "ename": "CalledProcessError",
-     "evalue": "Command '['docker', 'build', '-t', 'cat12:latest', '-f', 'C:\\\\Users\\\\Calvin\\\\Documents\\\\Software\\\\Research\\\\nimlab\\\\vbm\\\\cat12\\\\containers\\\\Dockerfile.cat12', '.']' returned non-zero exit status 1.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mCalledProcessError\u001b[0m                        Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[12], line 4\u001b[0m\n\u001b[0;32m      2\u001b[0m sys\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mappend(\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mc:\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mUsers\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mCalvin\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mDocuments\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mSoftware\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mvbm\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m# from src.calvin_vbm import CalvinVBM\u001b[39;00m\n\u001b[1;32m----> 4\u001b[0m \u001b[43mbuild_docker_image\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdockerfile_path\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43mr\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mC:\u001b[39;49m\u001b[38;5;124;43m\\\u001b[39;49m\u001b[38;5;124;43mUsers\u001b[39;49m\u001b[38;5;124;43m\\\u001b[39;49m\u001b[38;5;124;43mCalvin\u001b[39;49m\u001b[38;5;124;43m\\\u001b[39;49m\u001b[38;5;124;43mDocuments\u001b[39;49m\u001b[38;5;124;43m\\\u001b[39;49m\u001b[38;5;124;43mSoftware\u001b[39;49m\u001b[38;5;124;43m\\\u001b[39;49m\u001b[38;5;124;43mResearch\u001b[39;49m\u001b[38;5;124;43m\\\u001b[39;49m\u001b[38;5;124;43mnimlab\u001b[39;49m\u001b[38;5;124;43m\\\u001b[39;49m\u001b[38;5;124;43mvbm\u001b[39;49m\u001b[38;5;124;43m\\\u001b[39;49m\u001b[38;5;124;43mcat12\u001b[39;49m\u001b[38;5;124;43m\\\u001b[39;49m\u001b[38;5;124;43mcontainers\u001b[39;49m\u001b[38;5;124;43m\\\u001b[39;49m\u001b[38;5;124;43mDockerfile.cat12\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;66;03m# CalvinVBM.run_docker_on_folder(folder_path=folder_path)\u001b[39;00m\n",
-      "Cell \u001b[1;32mIn[11], line 25\u001b[0m, in \u001b[0;36mbuild_docker_image\u001b[1;34m(dockerfile_path)\u001b[0m\n\u001b[0;32m     23\u001b[0m \u001b[38;5;66;03m# Check if the build was successful\u001b[39;00m\n\u001b[0;32m     24\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m result\u001b[38;5;241m.\u001b[39mreturncode \u001b[38;5;241m!=\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[1;32m---> 25\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m subprocess\u001b[38;5;241m.\u001b[39mCalledProcessError(result\u001b[38;5;241m.\u001b[39mreturncode, result\u001b[38;5;241m.\u001b[39margs)\n\u001b[0;32m     27\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDocker image built successfully.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[1;31mCalledProcessError\u001b[0m: Command '['docker', 'build', '-t', 'cat12:latest', '-f', 'C:\\\\Users\\\\Calvin\\\\Documents\\\\Software\\\\Research\\\\nimlab\\\\vbm\\\\cat12\\\\containers\\\\Dockerfile.cat12', '.']' returned non-zero exit status 1."
+      "Running Docker container with script: run_segmentation_bids.sh\n",
+      "An error occurred while running Docker: Command '['docker', 'run', '--rm', '-v', 'C:/Users/Calvin/Partners HealthCare Dropbox/Calvin Howard/resources/datasets/PINES_SCHIZOPHRENIA_ECT:/data', '-v', 'C:/Users/Calvin/Documents/Software/vbm/src:/scripts', 'cat12:latest', '/scripts/run_segmentation_bids.sh']' returned non-zero exit status 137.\n"
      ]
     }
    ],
@@ -90,18 +133,7 @@
     "import sys\n",
     "sys.path.append(r\"c:\\Users\\Calvin\\Documents\\Software\\vbm\")\n",
     "from src.calvin_vbm import CalvinVBM\n",
-    "CalvinVBM.build_docker_image(dockerfile_path=r\"C:\\Users\\Calvin\\Documents\\Software\\Research\\nimlab\\vbm\\cat12\\containers\\Dockerfile.cat12\")\n",
-    "# CalvinVBM.run_docker_on_folder(folder_path=folder_path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "/cat_standalone_get_TIV_calvin.m\n",
-    "/cat_standalone_get_TIV_calvin.m"
+    "CalvinVBM.run_docker_with_script(folder_path, script)"
    ]
   },
   {
