--- a/notebooks/01_preprocess_tissue_segments.ipynb
+++ b/notebooks/01_preprocess_tissue_segments.ipynb
@@ -9,7 +9,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install -e C:\\Users\\Calvin\\Documents\\Software\\calvin_project_dir\\calvin_utils_project"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,14 +71,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_directory = r'/Volumes/Expansion/datasets/adni/neuroimaging/all_patients'\n",
-    "grey_matter_glob_name_pattern = '*/mri/mwp1*'\n",
-    "white_matter_glob_name_pattern = '*/mri/mwp2*'\n",
-    "csf_glob_name_pattern = '*/mri/mwp3*'"
+    "base_directory = r'C:\\Users\\Calvin\\Partners HealthCare Dropbox\\Calvin Howard\\resources\\datasets\\PINES_SCHIZOPHRENIA_ECT'\n",
+    "grey_matter_glob_name_pattern = 'sub-*/ses-*/anat/smwp1*'\n",
+    "white_matter_glob_name_pattern = 'sub-*/ses-*/anat/smwp2*'\n",
+    "csf_glob_name_pattern = 'sub-*/ses-*/anat/smwp3*'"
    ]
   },
   {
@@ -86,7 +95,7 @@
    "outputs": [],
    "source": [
     "from calvin_utils.vbm_utils.preprocessing import downsample_orchestrator\n",
-    "output_paths = downsample_orchestrator(base_directory, grey_matter_glob_name_pattern, white_matter_glob_name_pattern, csf_glob_name_pattern)"
+    "output_paths = downsample_orchestrator(base_directory, grey_matter_glob_name_pattern, white_matter_glob_name_pattern, csf_glob_name_pattern, mni_mask_path=r'C:\\Users\\Calvin\\Partners HealthCare Dropbox\\Calvin Howard\\resources\\mni_spaces\\MNI152_T1_2mm_brain.nii')"
    ]
   },
   {
@@ -99,18 +108,13 @@
     "\n",
     "-Calvin"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python3.10 (nimlab)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "nimlab_py310"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -122,7 +126,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.11.9"
   },
   "orig_nbformat": 4
  },
