--- a/notebooks/00_process_brains.ipynb
+++ b/notebooks/00_process_brains.ipynb
@@ -14,7 +14,7 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "path_to_repo = r\"c:\\Users\\Calvin\\Documents\\Software\\vbm\"\n",
+    "path_to_repo = r\"/Users/cu135/Library/CloudStorage/OneDrive-Personal/OneDrive_Documents/Work/Software/VBM\"\n",
     "sys.path.append(path_to_repo)"
    ]
   },
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,15 +85,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Running Docker container with script: run_segmentation_bids.sh\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from src.calvin_vbm import CalvinVBM\n",
     "CalvinVBM.run_docker_with_script(folder_path, script)"
@@ -135,7 +127,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "nimlab_py310",
    "language": "python",
    "name": "python3"
   },
@@ -149,7 +141,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
